fix chart on mobiles

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,11 @@ html {
 html::-webkit-scrollbar {
     display: none;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
